@@ -4,22 +4,27 @@
     "actionsSet" : {
       "actions" : [ {
         "name" : "closeAccounts",
+        "doc" : "This is a sample Javadoc comment for an action. This method below takes in parameters that\n specify what accounts to close\nService Returns: A map that contains details about account closures. This return description here is intentionally\nlong and poorly spaced in between\nso that I can make sure it shows up correctly in the restspec.json",
         "returns" : "{ \"type\" : \"map\", \"values\" : \"string\" }",
         "parameters" : [ {
           "name" : "emailAddresses",
+          "doc" : "Array of email addresses",
           "type" : "{ \"type\" : \"array\", \"items\" : \"string\" }"
         }, {
           "name" : "someFlag",
+          "doc" : "flag for some custom behavior",
           "type" : "boolean"
         }, {
           "optional" : true,
           "name" : "options",
+          "doc" : "a map specifying some custom options",
           "type" : "{ \"type\" : \"map\", \"values\" : \"string\" }"
         } ]
       }, {
         "name" : "noArgMethod"
       }, {
         "name" : "primitiveResponse",
+        "doc" : "This is a another sample Javadoc comment for an action. This poorly written java doc neglects to mention a return\n parameter description",
         "returns" : "int"
       }, {
         "name" : "register",
@@ -43,6 +48,7 @@
         } ]
       }, {
         "name" : "spamTweets",
+        "doc" : "This is a another sample Javadoc comment for an action. This semi-poorly written java doc only has one character in the\n return description and uses a mixture of upper and lower case letters in the @return tag\nService Returns: ^",
         "parameters" : [ {
           "name" : "statuses",
           "type" : "{ \"type\" : \"array\", \"items\" : \"string\" }"
